[package]
name = "tictactoe"
version = "0.1.0"
authors = ["Ferhad Mehdizade <frhdmehdiyev@gmail.com>"]
description = "Tic Tac Toe Game"
license = "MIT/Apache-2.0"
repository = "https://github.com/ferhadme/tictactoe"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.49"
